--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 body {
     background-color: black;
     color: white;
@@ -12,17 +15,29 @@ body {
     align-content: center;
 
     font-family: Arial, Helvetica, sans-serif;
+
+    height: 100%;
+}
+div#root {
+  height: 100%;
 }
 main {
+  height: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 div.name {
-  padding: 20px;
+  padding: 10px;
+  margin: 20px;
+  margin-bottom: 5px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 div.description {
-  padding: 20px;
+  padding: 5px;
 }
 table.hand {
     border: 0px;
