--- a/src/App.css
+++ b/src/App.css
@@ -2,42 +2,118 @@ html {
   height: 100%;
 }
 body {
-    background-color: black;
-    color: white;
-
-    margin-top: 5px;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-
     display: flex;
     flex-direction: column;
     align-content: center;
 
-    font-family: Arial, Helvetica, sans-serif;
-
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
-div#root {
-  height: 100%;
+
+.shadowed-frame_01 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_01);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_02 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_02);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_03 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_03);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_04 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_04);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_05 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_05);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_06 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_06);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_07 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_07);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+}
+
+.shadowed-frame_08 {
+  -webkit-filter: drop-shadow(3px 3px 4px rgba(0,0,0,0.5));
+  filter: url(#drop-shadow-frame_08);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
 }
 main {
   height: 100%;
+
+  background-color: #f5f5f5;
+  background: url('/images/background.jpg');
+  background-size: 100px 100px;
+  background-repeat: repeat;
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  color: white;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-div.name {
-  padding: 10px;
+
+img.frame {
+  z-index: 10;
+}
+
+svg.frame-shadow {
+  z-index: 1;
+}
+
+div#root {
+  height: 100%;
+}
+div.information {
   margin: 20px;
-  margin-bottom: 5px;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  background: #fffff3;
+
+  -webkit-filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.5));
+
+  border-radius: 2px;
 }
 div.description {
-  padding: 5px;
+  padding: 15px;
+  padding-top: 25px;
+  color: #424242;
+  background: #f3f5e4;
+}
+div.name {
+  padding: 15px;
+  padding-bottom: 25px;
+  color: black;
+  font-weight: 700;
 }
 table.hand {
     border: 0px;
